@@ -57,7 +57,7 @@ resource "google_compute_instance" "controller_node" {
   machine_type = var.machine_type
   zone         = var.zone
 
-  tags = ["controller"]
+  tags = ["${var.cluster_name}", "controller"]
 
   boot_disk {
     initialize_params {
@@ -139,7 +139,7 @@ resource "google_compute_instance_from_template" "controller_node" {
   machine_type = var.machine_type
   zone         = var.zone
 
-  tags = ["controller"]
+  tags = ["${var.cluster_name}", "controller"]
 
   dynamic "boot_disk" {
     for_each = var.image != null && var.boot_disk_type != null && var.boot_disk_size != null ? [1] : []
